--- a/2023I_MCE5_ExamenParcial1.Rmd
+++ b/2023I_MCE5_ExamenParcial1.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Examen parcial 1 - Métodos Cuantitativos en Ecología"
 author: 'Ivonne Carpio'
-date: "23 de mayo de 2023"
+date: "23 de mayo de 2023."
 output: 
   html_document:
     toc: true
