--- a/2023I_MCE5_ExamenParcial1.Rmd
+++ b/2023I_MCE5_ExamenParcial1.Rmd
@@ -97,11 +97,21 @@ En una hoja de papel dibuje un gráfico hipotetico basado en la figura 4 del art
 
 En esta parte debe aplicar las regresiones lineal, linearizada y generalizada sobre la presencia de ácaros en musgos. Una de las especies analizadas es *Galumma sp.* cuya abundancia presencia y proporción es posiblemente afectada por las siguiente cinco variables ambientales como densidad de sustrato, el tipo de sustrato, el contenido de agua, si se tiene o no arbustos en la cercanía y la topografía del suelo. Utilice la data ```mites.csv``` y responda los siguientes items. 
 
+```{r}
+library(readr)
+mites <- read_csv("mites.csv")
+View(mites)
+```
+
 - ¿Cuál es el efecto de las variables ambientales en la i) abundancia de ii) abundancia y iii) proporción de la especie *Galumma sp.*?
 
 Para responder esta pregunta debe generar las hipótesis y probar las hipótesis (código y explicación), asimismo visualizar con etiquetas adecuadas. Considere realizar lo siguiente:
 
 - Realizar un análisis exploratorio.
+
+```{r}
+head(mites)
+```
 
 - Realizar regresiones lineales de cada variable de respuesta y variables efectoras, univariable o multivariable. Verifique los supuestos de la regresión. 
 
