--- a/2023I_MCE5_ExamenParcial1.Rmd
+++ b/2023I_MCE5_ExamenParcial1.Rmd
@@ -107,7 +107,7 @@ View(mites)
 
 Para responder esta pregunta debe generar las hipótesis y probar las hipótesis (código y explicación), asimismo visualizar con etiquetas adecuadas. Considere realizar lo siguiente:
 
-- Realizar un análisis exploratorio
+- Realizar un análisis exploratorio.
 
 ```{r}
 head(mites)
