Ivonne Carpio - Ejercicio 3 análisis exploratorio

--- a/2023I_MCE5_ExamenParcial1.Rmd
+++ b/2023I_MCE5_ExamenParcial1.Rmd
@@ -112,6 +112,7 @@ Para responder esta pregunta debe generar las hipótesis y probar las hipótesis
 ```{r}
 head(mites)
 ```
+Tenemos datos sobre correlación de agua, proporción, abundancia, etc. con lo cúal podremos ver la presencia de ácaros en musgos
 
 - Realizar regresiones lineales de cada variable de respuesta y variables efectoras, univariable o multivariable. Verifique los supuestos de la regresión. 
 
